# batch-load-test

./: .gitignore  .sops.yaml  README.md  control-layer.enc.yaml  helmfile.yaml  locust-batch-test.yaml
charts/db-init/: Chart.yaml  README.md  values.yaml
charts/db-init/templates/: _helpers.tpl  configmap.yaml  job.yaml
charts/locust/: Chart.yaml  README.md  values.yaml
charts/locust/files/: locustfile.py
charts/locust/templates/: NOTES.txt  _helpers.tpl  configmap-locustfile.yaml  configmap-testdata.yaml  job.yaml  service.yaml
charts/mockai/: Chart.yaml  README.md  values.yaml
charts/mockai/files/: responses.txt
charts/mockai/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
locust/: .gitignore  Dockerfile  README.md  load_test.py  locustfile.py  pyproject.toml
locust/test_data/: batch_input_large.jsonl  batch_input_medium.jsonl  batch_input_small.jsonl
